fixed bug in surronding env table and updated readme

--- a/src/importSoil/importSoil.ipynb
+++ b/src/importSoil/importSoil.ipynb
@@ -116,13 +116,14 @@
     "soilSurrondings = gpd.read_file(file, encoding='utf-8')\n",
     "soilSurrondings = pd.DataFrame(soilSurrondings.drop(columns='geometry'))\n",
     "\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[0]: 'land_area'}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[1]: 'water_area'}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[2]: 'fresh_area'}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[3]: 'ocean_area'}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[3]: 'total_area'}, inplace=True)\n",
+    "soilSurrondings.rename(columns={soilSurrondings.columns[0]: 'poly_id'}, inplace=True)\n",
+    "soilSurrondings.rename(columns={soilSurrondings.columns[1]: 'land_area'}, inplace=True)\n",
+    "soilSurrondings.rename(columns={soilSurrondings.columns[2]: 'water_area'}, inplace=True)\n",
+    "soilSurrondings.rename(columns={soilSurrondings.columns[3]: 'fresh_area'}, inplace=True)\n",
+    "soilSurrondings.rename(columns={soilSurrondings.columns[4]: 'ocean_area'}, inplace=True)\n",
+    "soilSurrondings.rename(columns={soilSurrondings.columns[5]: 'total_area'}, inplace=True)\n",
     "\n",
-    "soilComp.to_sql(SOIL_SURRONDINGS_TABLE, conn, index=False, if_exists='replace')"
+    "soilSurrondings.to_sql(SOIL_SURRONDINGS_TABLE, conn, index=False, if_exists='replace')"
    ]
   },
   {
