--- a/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
+++ b/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import xarray as xr\n",
     "import geopandas as gpd\n",
     "# from QueryHandler import QueryHandler\n",
+    "from QueryHandler import QueryHandler\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import sys\n",
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +104,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inserting in db\n",
+    "TABLE = 'agg_soil_moisture'\n",
+    "queryHandler = QueryHandler()\n",
+    "queryHandler.createAggSoilMoistureTableReq(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm_df.to_sql(TABLE, conn, schema='public', if_exists='replace')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -112,27 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 117221 entries, 0 to 117220\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column         Non-Null Count   Dtype  \n",
-      "---  ------         --------------   -----  \n",
-      " 0   date           117221 non-null  object \n",
-      " 1   cr_num         117221 non-null  int64  \n",
-      " 2   district       117221 non-null  int64  \n",
-      " 3   soil_moisture  117221 non-null  float64\n",
-      "dtypes: float64(1), int64(2), object(1)\n",
-      "memory usage: 3.6+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sm_df.info()"
    ]
@@ -148,20 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.date"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(sm_df['date'].iloc[0])"
    ]
@@ -183,70 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cr_num</th>\n",
-       "      <th>car_uid</th>\n",
-       "      <th>soil_moisture</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>cr_num</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.959888</td>\n",
-       "      <td>-0.190717</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>car_uid</th>\n",
-       "      <td>0.959888</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.172730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>soil_moisture</th>\n",
-       "      <td>-0.190717</td>\n",
-       "      <td>-0.172730</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 cr_num   car_uid  soil_moisture\n",
-       "cr_num         1.000000  0.959888      -0.190717\n",
-       "car_uid        0.959888  1.000000      -0.172730\n",
-       "soil_moisture -0.190717 -0.172730       1.000000"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp_df = sm_df.drop(columns='date')\n",
     "temp_df.corr()"
