--- a/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
+++ b/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
@@ -9,6 +9,7 @@
     "import os\n",
     "import xarray as xr\n",
     "import geopandas as gpd\n",
+    "\n",
     "# from QueryHandler import QueryHandler\n",
     "from QueryHandler import QueryHandler\n",
     "from dotenv import load_dotenv\n",
@@ -16,6 +17,7 @@
     "import sys\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
     "sys.path.append(\"../\")\n",
@@ -29,11 +31,11 @@
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "PG_USER = os.getenv('POSTGRES_USER')\n",
-    "PG_PW = os.getenv('POSTGRES_PW')\n",
-    "PG_DB = os.getenv('POSTGRES_DB')\n",
-    "PG_ADDR = os.getenv('POSTGRES_ADDR')\n",
-    "PG_PORT = os.getenv('POSTGRES_PORT')"
+    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
+    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
+    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")"
    ]
   },
   {
@@ -53,8 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "query = sq.text('select * FROM public.soil_moisture')\n",
+    "query = sq.text(\"select * FROM public.soil_moisture\")\n",
     "sm_df = pd.read_sql(query, conn)"
    ]
   },
@@ -73,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm_df = sm_df.groupby(['date', 'cr_num', 'car_uid']).mean().reset_index()"
+    "sm_df = sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).mean().reset_index()"
    ]
   },
   {
@@ -82,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm_df.drop(columns = ['id', 'lat', 'lon'], inplace=True)"
+    "sm_df.drop(columns=[\"id\", \"lat\", \"lon\"], inplace=True)"
    ]
   },
   {
@@ -91,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm_df.rename(columns = {'car_uid':'district'}, inplace = True)"
+    "sm_df.rename(columns={\"car_uid\": \"district\"}, inplace=True)"
    ]
   },
   {
@@ -110,7 +111,7 @@
    "outputs": [],
    "source": [
     "# inserting in db\n",
-    "TABLE = 'agg_soil_moisture'\n",
+    "TABLE = \"agg_soil_moisture\"\n",
     "queryHandler = QueryHandler()\n",
     "queryHandler.createAggSoilMoistureTableReq(db)"
    ]
@@ -121,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm_df.to_sql(TABLE, conn, schema='public', if_exists='replace')"
+    "sm_df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"replace\")"
    ]
   },
   {
@@ -156,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(sm_df['date'].iloc[0])"
+    "type(sm_df[\"date\"].iloc[0])"
    ]
   },
   {
@@ -167,10 +168,10 @@
    "source": [
     "# distribution of the data\n",
     "\n",
-    "plt.hist(sm_df['soil_moisture'], bins=10)  # Plot a histogram\n",
-    "plt.xlabel('Soil Moisture')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of Soil Moisture')\n",
+    "plt.hist(sm_df[\"soil_moisture\"], bins=10)  # Plot a histogram\n",
+    "plt.xlabel(\"Soil Moisture\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Distribution of Soil Moisture\")\n",
     "plt.show()"
    ]
   },
@@ -180,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df = sm_df.drop(columns='date')\n",
+    "temp_df = sm_df.drop(columns=\"date\")\n",
     "temp_df.corr()"
    ]
   },
@@ -190,10 +191,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(sm_df['date'], sm_df['soil_moisture'])\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Soil Moisture')\n",
-    "plt.title('Scatter Plot: Soil Moisture over Time')\n",
+    "plt.scatter(sm_df[\"date\"], sm_df[\"soil_moisture\"])\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Soil Moisture\")\n",
+    "plt.title(\"Scatter Plot: Soil Moisture over Time\")\n",
     "# plt.xticks(rotation=45)  # Rotate x-axis labels for better visibility\n",
     "plt.show()"
    ]
