--- a/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
+++ b/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
@@ -268,7 +268,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_moisture_max = sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).max().reset_index()['soil_moisture']"
+    "soil_moisture_max = (\n",
+    "    sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).max().reset_index()[\"soil_moisture\"]\n",
+    ")"
    ]
   },
   {
@@ -277,7 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_moisture_min = sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).min().reset_index()['soil_moisture']"
+    "soil_moisture_min = (\n",
+    "    sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).min().reset_index()[\"soil_moisture\"]\n",
+    ")"
    ]
   },
   {
@@ -295,8 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm_df['soil_moisture_max'] = soil_moisture_max\n",
-    "sm_df['soil_moisture_min'] = soil_moisture_min\n",
+    "sm_df[\"soil_moisture_max\"] = soil_moisture_max\n",
+    "sm_df[\"soil_moisture_min\"] = soil_moisture_min\n",
     "sm_df.rename(columns={\"soil_moisture\": \"soil_moisture_mean\"}, inplace=True)"
    ]
   },
