--- a/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
+++ b/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
@@ -268,40 +268,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_moisture_max = (\n",
-    "    sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).max().reset_index()[\"soil_moisture\"]\n",
+    "sm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm_df = (\n",
+    "    sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"])\n",
+    "    .agg({\"soil_moisture\": [\"min\", \"max\", \"mean\"]})\n",
+    "    .reset_index()\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soil_moisture_min = (\n",
-    "    sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).min().reset_index()[\"soil_moisture\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df = sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"]).mean().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df[\"soil_moisture_max\"] = soil_moisture_max\n",
-    "sm_df[\"soil_moisture_min\"] = soil_moisture_min\n",
-    "sm_df.rename(columns={\"soil_moisture\": \"soil_moisture_mean\"}, inplace=True)"
    ]
   },
   {
@@ -319,16 +299,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm_df.drop(columns=[\"id\", \"lat\", \"lon\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df.rename(columns={\"car_uid\": \"district\"}, inplace=True)"
+    "sm_df.columns = [\n",
+    "    \"date\",\n",
+    "    \"cr_num\",\n",
+    "    \"district\",\n",
+    "    \"soil_moisture_min\",\n",
+    "    \"soil_moisture_max\",\n",
+    "    \"soil_moisture_mean\",\n",
+    "]\n",
+    "sm_df[[\"soil_moisture_min\", \"soil_moisture_max\", \"soil_moisture_mean\"]] = sm_df[\n",
+    "    [\"soil_moisture_min\", \"soil_moisture_max\", \"soil_moisture_mean\"]\n",
+    "].astype(float)\n",
+    "sm_df"
    ]
   },
   {
