--- a/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
+++ b/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm_df.columns = [\n",
+    "sm_df.columns = [ # type : ignore\n",
     "    \"date\",\n",
     "    \"cr_num\",\n",
     "    \"district\",\n",
@@ -307,6 +307,7 @@
     "    \"soil_moisture_max\",\n",
     "    \"soil_moisture_mean\",\n",
     "]\n",
+    "\n",
     "sm_df[[\"soil_moisture_min\", \"soil_moisture_max\", \"soil_moisture_mean\"]] = sm_df[\n",
     "    [\"soil_moisture_min\", \"soil_moisture_max\", \"soil_moisture_mean\"]\n",
     "].astype(float)\n",
