--- a/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
+++ b/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
@@ -21,7 +21,7 @@
         "%matplotlib inline\n",
         "\n",
         "sys.path.append(\"../\")\n",
-        "from DataService import DataService"
+        "from Shared.DataService import DataService"
       ]
     },
     {
@@ -227,225 +227,6 @@
     },
     "orig_nbformat": 4
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_dotenv()\n",
-    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
-    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
-    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
-    "PG_PORT = os.getenv(\"POSTGRES_PORT\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# connicting to database\n",
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
-    "conn = db.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = sq.text(\"select * FROM public.soil_moisture\")\n",
-    "sm_df = pd.read_sql(query, conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df = (\n",
-    "    sm_df.groupby([\"date\", \"cr_num\", \"car_uid\"])\n",
-    "    .agg({\"soil_moisture\": [\"min\", \"max\", \"mean\"]})\n",
-    "    .reset_index()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df.columns = [ # type : ignore\n",
-    "    \"date\",\n",
-    "    \"cr_num\",\n",
-    "    \"district\",\n",
-    "    \"soil_moisture_min\",\n",
-    "    \"soil_moisture_max\",\n",
-    "    \"soil_moisture_mean\",\n",
-    "]\n",
-    "\n",
-    "sm_df[[\"soil_moisture_min\", \"soil_moisture_max\", \"soil_moisture_mean\"]] = sm_df[\n",
-    "    [\"soil_moisture_min\", \"soil_moisture_max\", \"soil_moisture_mean\"]\n",
-    "].astype(float)\n",
-    "sm_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inserting in db\n",
-    "TABLE = \"agg_soil_moisture\"\n",
-    "queryHandler = QueryHandler()\n",
-    "queryHandler.createAggSoilMoistureTableReq(db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"replace\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visuilizing data      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(sm_df[\"date\"].iloc[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# distribution of the data\n",
-    "\n",
-    "plt.hist(sm_df[\"soil_moisture\"], bins=10)  # Plot a histogram\n",
-    "plt.xlabel(\"Soil Moisture\")\n",
-    "plt.ylabel(\"Frequency\")\n",
-    "plt.title(\"Distribution of Soil Moisture\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp_df = sm_df.drop(columns=\"date\")\n",
-    "temp_df.corr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(sm_df[\"date\"], sm_df[\"soil_moisture\"])\n",
-    "plt.xlabel(\"Date\")\n",
-    "plt.ylabel(\"Soil Moisture\")\n",
-    "plt.title(\"Scatter Plot: Soil Moisture over Time\")\n",
-    "# plt.xticks(rotation=45)  # Rotate x-axis labels for better visibility\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
