--- a/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
+++ b/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
@@ -37,14 +37,14 @@
    "source": [
     "import os\n",
     "import xarray as xr\n",
-    "import geopandas as gpd\n",
+    "import geopandas as gpd  # type: ignore\n",
     "from QueryHandler import QueryHandler\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService"
+    "from Shared.DataService import DataService  # type: ignore"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "df = gpd.GeoDataFrame(\n",
     "    df, crs=\"EPSG:4326\", geometry=gpd.points_from_xy(df.lon, df.lat)\n",
     ")  # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
-    "df = df.to_crs(\n",
+    "df = df.to_crs(  # type: ignore\n",
     "    crs=\"EPSG:3347\"\n",
     ")  # Changes the points projection to match the agriculture regions of EPSG:3347\n",
     "df = gpd.sjoin(\n",
