--- a/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
+++ b/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
@@ -63,11 +63,11 @@
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
-    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
-    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
-    "PG_PORT = os.getenv(\"POSTGRES_PORT\")"
+    "PG_USER = os.getenv(\"POSTGRES_USER\", \"\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\", \"\")\n",
+    "PG_DB = os.getenv(\"POSTGRES_DB\", \"\")\n",
+    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\", \"\")\n",
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\", 5432)"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "netcdf_file_path = \"/data/common/Images/2004/ESACCI-SOILMOISTURE-L3S-SSMV-COMBINED-20040605000000-fv07.1.nc\"\n",
     "queryHandler = QueryHandler()\n",
     "\n",
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()\n",
     "\n",
     "queryHandler.createSoilMoistureTableReq(db)"
