attempting to satisfy linter overloards

--- a/src/importSoil/importSoil.ipynb
+++ b/src/importSoil/importSoil.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "import geopandas as gpd\n",
+    "import geopandas as gpd                     # type: ignore\n",
     "import pandas as pd\n",
     "import os, sys\n",
     "\n",
     "sys.path.append('../')\n",
-    "from Shared.DataService import DataService"
+    "from Shared.DataService import DataService  # type: ignore"
    ]
   },
   {
