--- a/src/importSoil/labelSoil.ipynb
+++ b/src/importSoil/labelSoil.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "from colorhash import ColorHash\n",
+    "from matplotlib import pyplot as plt        # type: ignore\n",
+    "from colorhash import ColorHash             # type: ignore\n",
     "import sqlalchemy as sq\n",
-    "import geopandas as gpd\n",
+    "import geopandas as gpd                     # type: ignore\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "import os, sys\n",
     "\n",
     "sys.path.append('../')\n",
-    "from Shared.DataService import DataService"
+    "from Shared.DataService import DataService  # type: ignore"
    ]
   },
   {
