--- a/src/importSoil/importSoil.ipynb
+++ b/src/importSoil/importSoil.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "import geopandas as gpd                     # type: ignore\n",
-    "import pandas as pd\n",
+    "import geopandas as gpd  # type: ignore\n",
+    "import pandas as pd  # type: ignore\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
@@ -170,7 +170,18 @@
     "\n",
     "soilData = pd.concat([mbSoil, abSoil, skSoil])\n",
     "\n",
-    "soilData.drop(columns=[\"PROFILE\", \"ORDER2\", \"G_GROUP2\", \"S_GROUP2\", \"ORDER3\", \"G_GROUP3\", \"S_GROUP3\"], inplace=True)\n",
+    "soilData.drop(\n",
+    "    columns=[\n",
+    "        \"PROFILE\",\n",
+    "        \"ORDER2\",\n",
+    "        \"G_GROUP2\",\n",
+    "        \"S_GROUP2\",\n",
+    "        \"ORDER3\",\n",
+    "        \"G_GROUP3\",\n",
+    "        \"S_GROUP3\",\n",
+    "    ],\n",
+    "    inplace=True,\n",
+    ")\n",
     "\n",
     "soilData.rename(columns={soilData.columns[0]: \"id\"}, inplace=True)\n",
     "soilData.rename(columns={soilData.columns[1]: \"province\"}, inplace=True)\n",
@@ -182,12 +193,24 @@
     "soilData.rename(columns={soilData.columns[7]: \"root_restrict\"}, inplace=True)\n",
     "soilData.rename(columns={soilData.columns[8]: \"restr_type\"}, inplace=True)\n",
     "soilData.rename(columns={soilData.columns[9]: \"drainage\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[10]: \"parent_material_texture_1\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[11]: \"parent_material_texture_2\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[12]: \"parent_material_texture_3\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[13]: \"parent_material_chemical_1\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[14]: \"parent_material_chemical_2\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[15]: \"parent_material_chemical_3\"}, inplace=True)\n",
+    "soilData.rename(\n",
+    "    columns={soilData.columns[10]: \"parent_material_texture_1\"}, inplace=True\n",
+    ")\n",
+    "soilData.rename(\n",
+    "    columns={soilData.columns[11]: \"parent_material_texture_2\"}, inplace=True\n",
+    ")\n",
+    "soilData.rename(\n",
+    "    columns={soilData.columns[12]: \"parent_material_texture_3\"}, inplace=True\n",
+    ")\n",
+    "soilData.rename(\n",
+    "    columns={soilData.columns[13]: \"parent_material_chemical_1\"}, inplace=True\n",
+    ")\n",
+    "soilData.rename(\n",
+    "    columns={soilData.columns[14]: \"parent_material_chemical_2\"}, inplace=True\n",
+    ")\n",
+    "soilData.rename(\n",
+    "    columns={soilData.columns[15]: \"parent_material_chemical_3\"}, inplace=True\n",
+    ")\n",
     "soilData.rename(columns={soilData.columns[16]: \"mode_of_depo_1\"}, inplace=True)\n",
     "soilData.rename(columns={soilData.columns[17]: \"mode_of_depo_2\"}, inplace=True)\n",
     "soilData.rename(columns={soilData.columns[18]: \"mode_of_depo_3\"}, inplace=True)\n",
