--- a/src/importSoil/labelSoil.ipynb
+++ b/src/importSoil/labelSoil.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt        # type: ignore\n",
-    "from colorhash import ColorHash             # type: ignore\n",
+    "from matplotlib import pyplot as plt  # type: ignore\n",
+    "from colorhash import ColorHash  # type: ignore\n",
     "import sqlalchemy as sq\n",
-    "import geopandas as gpd                     # type: ignore\n",
-    "import pandas as pd\n",
+    "import geopandas as gpd  # type: ignore\n",
+    "import pandas as pd  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import os, sys\n",
     "\n",
@@ -51,8 +51,8 @@
    "outputs": [],
    "source": [
     "# load the boundaries for the agriculture regions\n",
-    "query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")               # type: ignore\n",
-    "agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")    # type: ignore"
+    "query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")  # type: ignore\n",
+    "agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")  # type: ignore"
    ]
   },
   {
@@ -75,7 +75,9 @@
    "source": [
     "# load the boundaries for the polygons\n",
     "query = sq.text(\"select poly_id, geometry FROM public.soil_geometry\")\n",
-    "soilRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")"
+    "soilRegions = gpd.GeoDataFrame.from_postgis(\n",
+    "    query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    ")"
    ]
   },
   {
@@ -84,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merge the components and the soil boundaries into one \n",
+    "# merge the components and the soil boundaries into one\n",
     "regionsAndComponents = soilRegions.merge(components, on=\"poly_id\")"
    ]
   },
@@ -95,8 +97,8 @@
    "outputs": [],
    "source": [
     "# join the the newly merged soil dataframe with the agriculture boundaries\n",
-    "soil = gpd.sjoin(regionsAndComponents, agRegions, how=\"left\", predicate=\"intersects\")    \n",
-    "soil = soil[soil[\"cr_num\"].notna()]                                     # Take rows that are valid numbers\n",
+    "soil = gpd.sjoin(regionsAndComponents, agRegions, how=\"left\", predicate=\"intersects\")\n",
+    "soil = soil[soil[\"cr_num\"].notna()]  # Take rows that are valid numbers\n",
     "soil.drop(columns=[\"index_right\"], inplace=True)\n",
     "soil = soil.reset_index()"
    ]
@@ -161,7 +163,7 @@
     "fig, ax = plt.subplots(figsize=(13, 13))\n",
     "ax.set_ylim(miny, maxy)\n",
     "soil.plot(ax=ax, color=soil[\"color\"])\n",
-    "agRegions.geometry.boundary.plot(color=None, edgecolor=\"k\", linewidth = 2, ax=ax)\n",
+    "agRegions.geometry.boundary.plot(color=None, edgecolor=\"k\", linewidth=2, ax=ax)\n",
     "\n",
     "plt.show()"
    ]
