fixed mypy error

--- a/src/importSoil/labelSoil.ipynb
+++ b/src/importSoil/labelSoil.ipynb
@@ -62,9 +62,9 @@
    "outputs": [],
    "source": [
     "# load the polygon components\n",
-    "query = pd.read_sql_query(\"select soil_id, poly_id FROM public.soil_components\", conn)\n",
-    "components = pd.DataFrame(query, columns=[\"soil_id\", \"poly_id\"])\n",
-    "components = components.groupby(\"poly_id\")[\"soil_id\"].apply(set)"
+    "query = pd.read_sql_query(\"select soil_id, poly_id FROM public.soil_components\", conn)  # type: ignore\n",
+    "components = pd.DataFrame(query, columns=[\"soil_id\", \"poly_id\"])  # type: ignore\n",
+    "components = components.groupby(\"poly_id\")[\"soil_id\"].apply(set)  # type: ignore"
    ]
   },
   {
