df columns are now renamed based on their OG name

--- a/src/importSoil/importSoil.ipynb
+++ b/src/importSoil/importSoil.ipynb
@@ -58,9 +58,9 @@
     "\n",
     "soilGeom.drop(columns=[\"ECO_ID\"], inplace=True)\n",
     "\n",
-    "soilGeom.rename(columns={soilGeom.columns[0]: \"area\"}, inplace=True)\n",
-    "soilGeom.rename(columns={soilGeom.columns[1]: \"perimeter\"}, inplace=True)\n",
-    "soilGeom.rename(columns={soilGeom.columns[2]: \"poly_id\"}, inplace=True)\n",
+    "soilGeom.rename(columns={\"AREA\": \"area\"}, inplace=True)\n",
+    "soilGeom.rename(columns={\"PERIMETER\": \"perimeter\"}, inplace=True)\n",
+    "soilGeom.rename(columns={\"POLY_ID\": \"poly_id\"}, inplace=True)\n",
     "\n",
     "soilGeom.to_postgis(SOIL_GEOM_TABLE, conn, index=False, if_exists=\"replace\")"
    ]
@@ -86,21 +86,21 @@
     "\n",
     "soilComp.drop(columns=[\"CMP_ID\", \"RESTR_TYPE\"], inplace=True)\n",
     "\n",
-    "soilComp.rename(columns={soilComp.columns[0]: \"poly_id\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[1]: \"cmp\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[2]: \"percent\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[3]: \"slope\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[4]: \"stone\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[5]: \"surface_area\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[6]: \"province\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[7]: \"soil_code\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[8]: \"modifier\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[9]: \"profile\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[10]: \"soil_id\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[11]: \"coarse_frag_1\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[12]: \"coarse_frag_2\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[13]: \"depth\"}, inplace=True)\n",
-    "soilComp.rename(columns={soilComp.columns[14]: \"water_holding_cap\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"POLY_ID\": \"poly_id\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"CMP\": \"cmp\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"PERCENT\": \"percent\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"SLOPE\": \"slope\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"STONE\": \"stone\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"LOCSF\": \"surface_area\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"PROVINCE\": \"province\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"SOIL_CODE\": \"soil_code\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"MODIFIER\": \"modifier\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"PROFILE\": \"profile\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"SOIL_ID\": \"soil_id\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"CFRAG1\": \"coarse_frag_1\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"CFRAG2\": \"coarse_frag_2\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"DEPTH\": \"depth\"}, inplace=True)\n",
+    "soilComp.rename(columns={\"AWHC\": \"water_holding_cap\"}, inplace=True)\n",
     "\n",
     "soilComp.to_sql(SOIL_COMP_TABLE, conn, index=False, if_exists=\"replace\")"
    ]
@@ -116,12 +116,12 @@
     "soilSurrondings = gpd.read_file(file, encoding=\"utf-8\")\n",
     "soilSurrondings = pd.DataFrame(soilSurrondings.drop(columns=\"geometry\"))\n",
     "\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[0]: \"poly_id\"}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[1]: \"land_area\"}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[2]: \"water_area\"}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[3]: \"fresh_area\"}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[4]: \"ocean_area\"}, inplace=True)\n",
-    "soilSurrondings.rename(columns={soilSurrondings.columns[5]: \"total_area\"}, inplace=True)\n",
+    "soilSurrondings.rename(columns={\"POLY_ID\": \"poly_id\"}, inplace=True)\n",
+    "soilSurrondings.rename(columns={\"LAND_AREA\": \"land_area\"}, inplace=True)\n",
+    "soilSurrondings.rename(columns={\"WATER_AREA\": \"water_area\"}, inplace=True)\n",
+    "soilSurrondings.rename(columns={\"FRESH_AREA\": \"fresh_area\"}, inplace=True)\n",
+    "soilSurrondings.rename(columns={\"OCEAN_AREA\": \"ocean_area\"}, inplace=True)\n",
+    "soilSurrondings.rename(columns={\"TOTAL_AREA\": \"total_area\"}, inplace=True)\n",
     "\n",
     "soilSurrondings.to_sql(SOIL_SURRONDINGS_TABLE, conn, index=False, if_exists=\"replace\")"
    ]
@@ -183,65 +183,53 @@
     "    inplace=True,\n",
     ")\n",
     "\n",
-    "soilData.rename(columns={soilData.columns[0]: \"id\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[1]: \"province\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[2]: \"code\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[3]: \"modifier\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[4]: \"name\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[5]: \"kind\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[6]: \"water_table\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[7]: \"root_restrict\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[8]: \"restr_type\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[9]: \"drainage\"}, inplace=True)\n",
-    "soilData.rename(\n",
-    "    columns={soilData.columns[10]: \"parent_material_texture_1\"}, inplace=True\n",
-    ")\n",
-    "soilData.rename(\n",
-    "    columns={soilData.columns[11]: \"parent_material_texture_2\"}, inplace=True\n",
-    ")\n",
-    "soilData.rename(\n",
-    "    columns={soilData.columns[12]: \"parent_material_texture_3\"}, inplace=True\n",
-    ")\n",
-    "soilData.rename(\n",
-    "    columns={soilData.columns[13]: \"parent_material_chemical_1\"}, inplace=True\n",
-    ")\n",
-    "soilData.rename(\n",
-    "    columns={soilData.columns[14]: \"parent_material_chemical_2\"}, inplace=True\n",
-    ")\n",
-    "soilData.rename(\n",
-    "    columns={soilData.columns[15]: \"parent_material_chemical_3\"}, inplace=True\n",
-    ")\n",
-    "soilData.rename(columns={soilData.columns[16]: \"mode_of_depo_1\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[17]: \"mode_of_depo_2\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[18]: \"mode_of_depo_3\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[19]: \"layer_no\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[20]: \"u_depth\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[21]: \"l_depth\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[22]: \"hzn_lit\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[23]: \"hzn_mas\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[24]: \"hzn_suf\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[25]: \"hzn_mod\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[26]: \"percnt_coarse_frag\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[27]: \"sand_texture\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[28]: \"percnt_v_fine_sand\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[29]: \"total_sand\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[30]: \"total_silt\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[31]: \"total_clay\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[32]: \"percnt_carbon\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[33]: \"calcium_ph\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[34]: \"proj_ph\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[35]: \"percnt_base_sat\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[36]: \"cec\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[37]: \"ksat\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[38]: \"water_reten_0\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[39]: \"water_reten_10\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[40]: \"water_reten_33\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[41]: \"water_reten_1500\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[42]: \"bulk_density\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[43]: \"elec_cond\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[44]: \"calc_equiv\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[45]: \"decomp_class\"}, inplace=True)\n",
-    "soilData.rename(columns={soilData.columns[46]: \"percnt_wood\"}, inplace=True)\n",
+    "soilData.rename(columns={\"SOIL_ID\": \"id\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PROVINCE\": \"province\"}, inplace=True)\n",
+    "soilData.rename(columns={\"SOIL_CODE\": \"code\"}, inplace=True)\n",
+    "soilData.rename(columns={\"MODIFIER\": \"modifier\"}, inplace=True)\n",
+    "soilData.rename(columns={\"SOILNAME\": \"name\"}, inplace=True)\n",
+    "soilData.rename(columns={\"KIND\": \"kind\"}, inplace=True)\n",
+    "soilData.rename(columns={\"WATERTBL\": \"water_table\"}, inplace=True)\n",
+    "soilData.rename(columns={\"ROOTRESTRI\": \"root_restrict\"}, inplace=True)\n",
+    "soilData.rename(columns={\"RESTR_TYPE\": \"restr_type\"}, inplace=True)\n",
+    "soilData.rename(columns={\"DRAINAGE\": \"drainage\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PMTEX1\": \"parent_material_texture_1\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PMTEX2\": \"parent_material_texture_2\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PMTEX3\": \"parent_material_texture_3\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PMCHEM1\": \"parent_material_chemical_1\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PMCHEM2\": \"parent_material_chemical_2\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PMCHEM3\": \"parent_material_chemical_3\"}, inplace=True)\n",
+    "soilData.rename(columns={\"MDEP1\": \"mode_of_depo_1\"}, inplace=True)\n",
+    "soilData.rename(columns={\"MDEP2\": \"mode_of_depo_2\"}, inplace=True)\n",
+    "soilData.rename(columns={\"MDEP3\": \"mode_of_depo_3\"}, inplace=True)\n",
+    "soilData.rename(columns={\"LAYER_NO\": \"layer_no\"}, inplace=True)\n",
+    "soilData.rename(columns={\"UDEPTH\": \"u_depth\"}, inplace=True)\n",
+    "soilData.rename(columns={\"LDEPTH\": \"l_depth\"}, inplace=True)\n",
+    "soilData.rename(columns={\"HZN_LIT\": \"hzn_lit\"}, inplace=True)\n",
+    "soilData.rename(columns={\"HZN_MAS\": \"hzn_mas\"}, inplace=True)\n",
+    "soilData.rename(columns={\"HZN_SUF\": \"hzn_suf\"}, inplace=True)\n",
+    "soilData.rename(columns={\"HZN_MOD\": \"hzn_mod\"}, inplace=True)\n",
+    "soilData.rename(columns={\"COFRAG\": \"percnt_coarse_frag\"}, inplace=True)\n",
+    "soilData.rename(columns={\"DOMSAND\": \"sand_texture\"}, inplace=True)\n",
+    "soilData.rename(columns={\"VFSAND\": \"percnt_v_fine_sand\"}, inplace=True)\n",
+    "soilData.rename(columns={\"TSAND\": \"total_sand\"}, inplace=True)\n",
+    "soilData.rename(columns={\"TSILT\": \"total_silt\"}, inplace=True)\n",
+    "soilData.rename(columns={\"TCLAY\": \"total_clay\"}, inplace=True)\n",
+    "soilData.rename(columns={\"ORGCARB\": \"percnt_carbon\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PHCA\": \"calcium_ph\"}, inplace=True)\n",
+    "soilData.rename(columns={\"PH2\": \"proj_ph\"}, inplace=True)\n",
+    "soilData.rename(columns={\"BASES\": \"percnt_base_sat\"}, inplace=True)\n",
+    "soilData.rename(columns={\"CEC\": \"cec\"}, inplace=True)\n",
+    "soilData.rename(columns={\"KSAT\": \"ksat\"}, inplace=True)\n",
+    "soilData.rename(columns={\"KP0\": \"water_reten_0\"}, inplace=True)\n",
+    "soilData.rename(columns={\"KP10\": \"water_reten_10\"}, inplace=True)\n",
+    "soilData.rename(columns={\"KP33\": \"water_reten_33\"}, inplace=True)\n",
+    "soilData.rename(columns={\"KP1500\": \"water_reten_1500\"}, inplace=True)\n",
+    "soilData.rename(columns={\"BD\": \"bulk_density\"}, inplace=True)\n",
+    "soilData.rename(columns={\"EC\": \"elec_cond\"}, inplace=True)\n",
+    "soilData.rename(columns={\"CACO3\": \"calc_equiv\"}, inplace=True)\n",
+    "soilData.rename(columns={\"VONPOST\": \"decomp_class\"}, inplace=True)\n",
+    "soilData.rename(columns={\"WOOD\": \"percnt_wood\"}, inplace=True)\n",
     "\n",
     "soilData.to_sql(SOIL_DATA_TABLE, conn, schema=\"public\", if_exists=\"append\", index=False)"
    ]
