waiting for ergot aggregation

--- a/src/WeatherStation/WeatherStationVisual.ipynb
+++ b/src/WeatherStation/WeatherStationVisual.ipynb
@@ -1640,6 +1640,189 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## import ergot data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = sq.text(\"select * FROM public.ergot_sample\")\n",
+    "ergot_df = pd.read_sql(query, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>province</th>\n",
+       "      <th>crop_district</th>\n",
+       "      <th>incidence</th>\n",
+       "      <th>severity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158694</th>\n",
+       "      <td>158695</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158695</th>\n",
+       "      <td>158696</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158696</th>\n",
+       "      <td>158697</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158697</th>\n",
+       "      <td>158698</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158698</th>\n",
+       "      <td>158699</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>158699 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sample_id  year province  crop_district  incidence  severity\n",
+       "0               1  1995       AB            1.0      False       NaN\n",
+       "1               2  1995       AB            1.0      False       NaN\n",
+       "2               3  1995       AB            1.0      False       NaN\n",
+       "3               4  1995       AB            1.0      False       NaN\n",
+       "4               5  1995       AB            1.0      False       NaN\n",
+       "...           ...   ...      ...            ...        ...       ...\n",
+       "158694     158695  2022       SK           81.0      False       NaN\n",
+       "158695     158696  2022       SK           81.0      False       NaN\n",
+       "158696     158697  2022       SK           81.0      False       NaN\n",
+       "158697     158698  2022       AB            7.0      False       NaN\n",
+       "158698     158699  2022       AB            7.0      False       NaN\n",
+       "\n",
+       "[158699 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ergot_df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
